feat: Add logic for create category.
